--- a/index.html
+++ b/index.html
@@ -545,7 +545,117 @@
 			</li>
         </ul>
         <!-- end channel -->
-    
+		<!-- floor start -->
+		<div class="floor container">
+			<div class="ad">
+				<a href="#"><img src="images/content/ad1.jpg"></a>
+			</div>
+			<div class="floor-QZSG module" id="floor-QZSG">
+				<h3 class="module-title">亲子时光
+					<i class="data-color-mark"> </i>
+					<span>KID & BABY</span>
+				</h3>
+				<ul class="hot-nav">
+					<li><a href="#">童装</a></li>
+					<li><a href="#">玩具</a></li>
+					<li><a href="#">待产用品</a></li>
+					<li><a href="#">文教用品</a></li>
+					<li><a href="#">宝宝用品</a></li>
+					<li><a href="#">儿童床品</a></li>
+					<li><a href="#">奶粉</a></li>
+					<li><a href="#">童书</a></li>
+					<li><a href="#">纸尿裤</a></li>
+				</ul>
+				<div class="module-body clear">
+					<div class="module-banner">
+						<a href="#">
+							<img src="images/content/QZSG.jpg">
+							<div class="hot-con">
+								<div class="hot-slider">
+									<ul class="slider-list">
+										<li>乳房护理我最强 &gt;</li>
+										<li>吸奶家族大集合 &gt;</li>
+										<li>进口大牌疯狂购 &gt;</li>
+										<li>乳房护理我最强 &gt;</li>
+									</ul>
+								</div>
+								<div class="hot-recommend">
+									<h4>哺乳妈妈清单</h4>
+									<p>大肚皮日记第6篇</p>
+									<span class="decoration"></span>
+								</div>
+							</div>
+						</a>
+					</div>
+					<ul class="module-list hot-list">
+						<li>
+							<a href="#">
+								<h4>暑假狂欢季</h4>
+								<p>品牌书包专场</p>
+								<img src="images/content/QZSG4.jpg">
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<h4>夏季童鞋大爆炸</h4>
+								<p>时尚潮流男童女童凉鞋</p>
+								<img src="images/content/QZSG3.jpg">
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<h4>卡通纯棉儿童内裤</h4>
+								<p>精美礼盒四条装</p>
+								<img src="images/content/QZSG8.jpg">
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<h4>夏季尚新</h4>
+								<p>时尚孕妇连衣裙</p>
+								<img src="images/content/QZSG7.jpg">
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<h4>迪士尼出游季</h4>
+								<p>加厚2CM 健康安全</p>
+								<img src="images/content/QZSG6.jpg">
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<h4>步步高暑期钜惠</h4>
+								<p>语数外同步点卖</p>
+								<img src="images/content/QZSG5.jpg">
+							</a>
+						</li>
+					</ul>
+					<ul class="module-list recommend-list">
+						<li>
+							<a href="#">
+								<h4>学习手机</h4>
+								<p>教你做学霸</p>
+								<img src="images/content/QZSG2.jpg">
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<h4>儿童图书</h4>
+								<p>宝宝都爱读的童话书</p>
+								<img src="images/content/QZSG9.jpg">
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<h4>暑假狂欢</h4>
+								<p>泳池派对</p>
+								<img src="images/content/QZSG1.jpg">
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
      <!-- 底部模块的制作 start -->
      <footer class="footer">
         <div>
