--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
 						<li>
 							<a href="#">
 								<h4>儿童图书</h4>
-								<p>宝宝都爱读的童话书</p>
+								<p>宝宝爱读的童话书</p>
 								<img src="images/content/QZSG9.jpg">
 							</a>
 						</li>
@@ -656,6 +656,109 @@
 					</ul>
 				</div>
 			</div>
+				<div class="floor-HWCX module" id="floor-HWCX">
+					<h3 class="module-title">户外出行
+						<i class="data-color-mark"> </i>
+						<span>OUTDOORS & AUTOMOTIVE</span>
+					</h3>
+					<ul class="hot-nav">
+						<li><a href="#">车秒货</a></li>
+						<li><a href="#">皮肤衣</a></li>
+						<li><a href="#">运动鞋</a></li>
+						<li><a href="#">4s保养</a></li>
+						<li><a href="#">宝行车记录仪</a></li>
+						<li><a href="#">轮胎</a></li>
+					</ul>
+					<div class="module-body clear">
+						<div class="module-banner">
+							<a href="#">
+								<img src="images/content/HWCX.jpg">
+								<div class="hot-con">
+									<div class="hot-slider">
+										<ul class="slider-list">
+											<li>夏季套装3折起 &gt;</li>
+											<li>夏季遮肚保守泳衣 &gt;</li>
+											<li>抢先购 &gt;</li>
+											<li>夏季套装3折起 &gt;</li>
+										</ul>
+									</div>
+									<div class="hot-recommend">
+										<h4>三伏天你下水了么</h4>
+										<p>裸价疯抢</p>
+										<span class="decoration"></span>
+									</div>
+								</div>
+							</a>
+						</div>
+						<ul class="module-list hot-list">
+							<li>
+								<a href="#">
+									<h4>标致2008首发</h4>
+									<p>更有好礼相送</p>
+									<img src="images/content/HWCX9.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>李宁正品女士泳衣</h4>
+									<p>时尚多款速干保守性感</p>
+									<img src="images/content/HWCX2.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>出行必备</h4>
+									<p>涉水穿戴款</p>
+									<img src="images/content/HWCX6.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>互联网汽车节</h4>
+									<p>购物券狂欢送</p>
+									<img src="images/content/HWCX3.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>特步时尚跑鞋</h4>
+									<p>休闲运动男鞋</p>
+									<img src="images/content/HWCX4.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>2016热销爆款</h4>
+									<p>色彩绚丽连体泳衣</p>
+									<img src="images/content/HWCX5.jpg">
+								</a>
+							</li>
+						</ul>
+						<ul class="module-list recommend-list">
+							<li>
+								<a href="#">
+									<h4>加油卡在线充</h4>
+									<p>中石化9.7折起</p>
+									<img src="images/content/HWCX10.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>大牌内饰新品首发</h4>
+									<p>送抱枕靠腰赢大礼</p>
+									<img src="images/content/HWCX8.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>秋季新品上市</h4>
+									<p>运动或休闲由你定义</p>
+									<img src="images/content/HWCX7.jpg">
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
      <!-- 底部模块的制作 start -->
      <footer class="footer">
         <div>
