--- a/index.html
+++ b/index.html
@@ -759,6 +759,223 @@
 						</ul>
 					</div>
 				</div>
+				<div class="ad">
+					<a href="#"><img src="images/content/ad2.jpg"></a>
+				</div>
+				<div class="floor-DZAC module" id="floor-DZAC">
+					<h3 class="module-title">打造爱巢
+						<i class="data-color-mark"> </i>
+						<span>HOME</span>
+					</h3>
+					<ul class="hot-nav">
+						<li><a href="#">家具</a></li>
+						<li><a href="#">大家电</a></li>
+						<li><a href="#">四件套</a></li>
+						<li><a href="#">健康电器</a></li>
+						<li><a href="#">厨房电器</a></li>
+						<li><a href="#">吸顶灯</a></li>
+						<li><a href="#">平板电视</a></li>
+						<li><a href="#">装修设计</a></li>
+						<li><a href="#">跑步机</a></li>
+					</ul>
+					<div class="module-body clear">
+						<div class="module-banner">
+							<a href="#">
+								<img src="images/content/DZAC.jpg">
+								<div class="hot-con">
+									<div class="hot-slider">
+										<ul class="slider-list">
+											<li>免息6期分期 &gt;</li>
+											<li>韩电102升租房神奇￥568 &gt;</li>
+											<li>西门子610升冰箱￥5999 &gt;</li>
+											<li>免息6期分期 &gt;</li>
+										</ul>
+									</div>
+									<div class="hot-recommend">
+										<h4>三精明煮夫保鲜利器</h4>
+										<p>全国免费预约配送入户</p>
+										<span class="decoration"></span>
+									</div>
+								</div>
+							</a>
+						</div>
+						<ul class="module-list hot-list">
+							<li>
+								<a href="#">
+									<h4>天猫沙发坐具节</h4>
+									<p>买一送一</p>
+									<img src="images/content/DZAC5.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>精明煮夫保险利器</h4>
+									<p>全国免费预约配送入户</p>
+									<img src="images/content/DZAC4.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>家有现代</h4>
+									<p>时尚在手</p>
+									<img src="images/content/DZAC10.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>平米计价更省钱</h4>
+									<p>轻松焕新家</p>
+									<img src="images/content/DZAC1.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>松下品牌特价回馈</h4>
+									<p>一站购齐省心更省薪</p>
+									<img src="images/content/DZAC6.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>夏时遇见</h4>
+									<p>感谢有你</p>
+									<img src="images/content/DZAC7.jpg">
+								</a>
+							</li>
+						</ul>
+						<ul class="module-list recommend-list">
+							<li>
+								<a href="#">
+									<h4>给父母一个安心</h4>
+									<p>关爱中老年健康</p>
+									<img src="images/content/DZAC9.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>慕思超级品牌日</h4>
+									<p>赢免费欧洲游</p>
+									<img src="images/content/DZAC2.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>暑假有特权</h4>
+									<p>为家服务</p>
+									<img src="images/content/DZAC3.jpg">
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="floor-JJSH module" id="floor-JJSH">
+					<h3 class="module-title">居家生活
+						<i class="data-color-mark"> </i>
+						<span>GROCERY & HEALTH</span>
+					</h3>
+					<ul class="hot-nav">
+						<li><a href="#">零食</a></li>
+						<li><a href="#">牛奶</a></li>
+						<li><a href="#">居家饰品</a></li>
+						<li><a href="#">保温瓶</a></li>
+						<li><a href="#">保健品</a></li>
+						<li><a href="#">常用药</a></li>
+						<li><a href="#">热门图书</a></li>
+						<li><a href="#">洗发水</a></li>
+						<li><a href="#">卫生巾</a></li>
+						<li><a href="#">家庭清洁</a></li>
+						<li><a href="#">狗粮</a></li>
+					</ul>
+					<div class="module-body clear">
+						<div class="module-banner">
+							<a href="#">
+								<img src="images/content/JJSH.jpg">
+								<div class="hot-con">
+									<div class="hot-slider">
+										<ul class="slider-list">
+											<li>上上家纺乳胶枕99元 &gt;</li>
+											<li>百丽丝专柜凉席超值疯抢 &gt;</li>
+											<li>法国波尔多红酒 &gt;</li>
+											<li>上上家纺乳胶枕99元 &gt;</li>
+										</ul>
+									</div>
+									<div class="hot-recommend">
+										<h4>家纺品牌特卖</h4>
+										<p>超值疯抢手慢无</p>
+										<span class="decoration"></span>
+									</div>
+								</div>
+							</a>
+						</div>
+						<ul class="module-list hot-list">
+							<li>
+								<a href="#">
+									<h4>自制酸奶新主义</h4>
+									<p>豪享DIY酸奶美味</p>
+									<img src="images/content/JJSH8.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>乐扣乐扣塑料水杯</h4>
+									<p>韩国欧巴李钟硕代言</p>
+									<img src="images/content/JJSH2.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>健康管家关爱血压</h4>
+									<p>电子智能血压计</p>
+									<img src="images/content/JJSH1.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>法国波尔多红酒</h4>
+									<p>愿品进口 品质保证</p>
+									<img src="images/content/JJSH7.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>特效杀蟑胶饵</h4>
+									<p>夏季除蟑必备</p>
+									<img src="images/content/JJSH3.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>天猫图书</h4>
+									<p>畅销图书让你好看</p>
+									<img src="images/content/JJSH6.jpg">
+								</a>
+							</li>
+						</ul>
+						<ul class="module-list recommend-list">
+							<li>
+								<a href="#">
+									<h4>汤臣倍健</h4>
+									<p>终于降价了</p>
+									<img src="images/content/JJSH9.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>中华名小吃</h4>
+									<p>唯美食与爱不可辜负</p>
+									<img src="images/content/JJSH5.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>吃货萌宠来袭</h4>
+									<p>爱从喂养开始</p>
+									<img src="images/content/JJSH4.jpg">
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
      <!-- 底部模块的制作 start -->
      <footer class="footer">
         <div>
