--- a/index.html
+++ b/index.html
@@ -976,6 +976,208 @@
 						</ul>
 					</div>
 				</div>
+				<div class="ad">
+					<a href="#"><img src="images/content/ad3.jpg"></a>
+				</div>
+				<div class="floor-CDKW module" id="floor-CDKW">
+					<h3 class="module-title">潮店酷玩
+						<i class="data-color-mark"> </i>
+						<span>ELECTRONICS</span>
+					</h3>
+					<ul class="hot-nav">
+						<li><a href="#">手机</a></li>
+						<li><a href="#">iPhone</a></li>
+						<li><a href="#">相机</a></li>
+						<li><a href="#">数码配件</a></li>
+						<li><a href="#">影音电玩</a></li>
+						<li><a href="#">生活电器</a></li>
+						<li><a href="#">个人护理</a></li>
+						<li><a href="#">电脑硬件</a></li>
+						<li><a href="#">笔记本</a></li>
+					</ul>
+					<div class="module-body clear">
+						<div class="module-banner">
+							<a href="#">
+								<img src="images/content/CDKW.jpg">
+								<div class="hot-con">
+									<div class="hot-slider">
+										<ul class="slider-list">
+											<li>12期免息0手续费 &gt;</li>
+											<li>轻奢5系低至799元 &gt;</li>
+											<li>新价赢战 不德不爱 &gt;</li>
+											<li>12期免息0手续费 &gt;</li>
+										</ul>
+									</div>
+									<div class="hot-recommend">
+										<h4>德系血统拜仁精神</h4>
+										<p>限量送43寸智能电视</p>
+										<span class="decoration"></span>
+									</div>
+								</div>
+							</a>
+						</div>
+						<ul class="module-list hot-list">
+							<li class="hot-item">
+								<a href="#">
+									<h4>夏日鲜机抢先购</h4>
+									<h5>原封国行 顺丰包邮 全网通</h5>
+									<p>iPhoneSE￥2988限时抢</p>
+									<img src="images/content/CDKW6.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>优惠券减200元</h4>
+									<p>高清防水40米</p>
+									<img src="images/content/CDKW5.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>有品3周年庆·</h4>
+									<p>0元抽大奖</p>
+									<img src="images/content/CDKW4.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>电竞影音大联盟</h4>
+									<p>分期免息大额优惠</p>
+									<img src="images/content/CDKW7.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>家务不要你管</h4>
+									<p>疯抢扫地机器人</p>
+									<img src="images/content/CDKW1.jpg">
+								</a>
+							</li>
+						</ul>
+						<ul class="module-list recommend-list">
+							<li>
+								<a href="#">
+									<h4>妈妈的新潮器时代</h4>
+									<p>关爱永不退场</p>
+									<img src="images/content/CDKW8.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>英特尔超级品牌日</h4>
+									<p>领券最高减1000元</p>
+									<img src="images/content/CDKW3.jpg">
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="floor-MLRS module" id="floor-MLRS">
+					<h3 class="module-title">美丽人生
+						<i class="data-color-mark"> </i>
+						<span>FASHION & BEAUTY</span>
+					</h3>
+					<ul class="hot-nav">
+						<li><a href="#">连衣裙</a></li>
+						<li><a href="#">T恤男</a></li>
+						<li><a href="#">每日护肤</a></li>
+						<li><a href="#">休闲男鞋</a></li>
+						<li><a href="#">黄金项链</a></li>
+						<li><a href="#">单鞋</a></li>
+						<li><a href="#">女包</a></li>
+						<li><a href="#">文胸</a></li>
+						<li><a href="#">大牌腕表</a></li>
+					</ul>
+					<div class="module-body clear">
+						<div class="module-banner">
+							<a href="#">
+								<img src="images/content/MLRS.jpg">
+								<div class="hot-con">
+									<div class="hot-slider">
+										<ul class="slider-list">
+											<li>吻柔妈妈夏日套装 &gt;</li>
+											<li>窈窕淑女必备美裙 &gt;</li>
+											<li>美少女萌萌哒美衣 &gt;</li>
+											<li>吻柔妈妈夏日套装 &gt;</li>
+										</ul>
+									</div>
+									<div class="hot-recommend">
+										<h4>夏日衣橱大焕新</h4>
+										<p>限量美衣手慢无</p>
+										<span class="decoration"></span>
+									</div>
+								</div>
+							</a>
+						</div>
+						<ul class="module-list hot-list">
+							<li>
+								<a href="#">
+									<h4>清凉一夏</h4>
+									<p>清爽短袖热卖</p>
+									<img src="images/content/MLRS3.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>酷夏补水有一套</h4>
+									<p>符合东方肤质补水套装</p>
+									<img src="images/content/MLRS9.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>大牌折扣季</h4>
+									<p>全场3折起</p>
+									<img src="images/content/MLRS7.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>丝袜诱惑性感来袭</h4>
+									<p>夏季尚新</p>
+									<img src="images/content/MLRS4.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>木林森男鞋</h4>
+									<p>夏日特惠</p>
+									<img src="images/content/MLRS2.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>暑假大作战</h4>
+									<p>夏季海量新品尚新</p>
+									<img src="images/content/MLRS1.jpg">
+								</a>
+							</li>
+						</ul>
+						<ul class="module-list recommend-list">
+							<li>
+								<a href="#">
+									<h4>探索夏日新潮流</h4>
+									<p>经典舒适</p>
+									<img src="images/content/MLRS8.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>年轻肌肤的小水库</h4>
+									<p>夏季控油补水保湿套装</p>
+									<img src="images/content/MLRS6.jpg">
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<h4>夏装新品抢先购</h4>
+									<p>会员专享新品券</p>
+									<img src="images/content/MLRS5.jpg">
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
      <!-- 底部模块的制作 start -->
      <footer class="footer">
         <div>
