--- a/index.html
+++ b/index.html
@@ -1178,6 +1178,151 @@
 						</ul>
 					</div>
 				</div>
+				<div class="floor-QJD module" id="floor-QJD">
+					<h3 class="module-title">品牌旗舰店 <span>FLAGSHIP STORES</span></h3>
+					<ul class="shop-list">
+						<li class="shop-item">
+							<div class="shop-header">
+								<img class="shop-logo" src="images/content/QJ1.jpg">
+								<div class="meta shop-meta">
+									<a href="#">
+										<h4>ABAHOUSE官方旗舰店</h4>
+										<p>1.2万粉丝</p>
+									</a>
+								</div>
+								<a class="enter-btn" href="#">进店看看</a>
+							</div>
+							<ul class="goods-list">
+								<li>
+									<img class="goods-poster" src="images/content/QJ1-1.jpg">
+									<div class="goods-desc">
+										<h5>ABAHOUSE 2016春夏新款男士牛皮系带休闲皮鞋多色可选7201301023</h5>
+										<span class="price">￥888</span>
+									</div>
+								</li>
+								<li>
+									<img class="goods-poster" src="images/content/QJ1-2.jpg">
+									<div class="goods-desc">
+										<h5>ABAHOUSE 春夏款定番系列意大利产高级牛皮撞色凉拖5251209046</h5>
+										<span class="price">￥564</span>
+									</div>
+								</li>
+								<li>
+									<img class="goods-poster" src="images/content/QJ1-3.jpg">
+									<div class="goods-desc">
+										<h5>ABAHOUSE 2016春夏新款意大利产设计款软底牛皮拖鞋7271009041</h5>
+										<span class="price">￥594</span>
+									</div>
+								</li>
+							</ul>
+						</li>
+						<li class="shop-item">
+							<div class="shop-header">
+								<img class="shop-logo" src="images/content/QJ2.png">
+								<div class="meta shop-meta">
+									<a href="#">
+										<h4>红桃K官方旗舰店</h4>
+										<p>5.8万粉丝</p>
+									</a>
+								</div>
+								<a class="enter-btn" href="#">进店看看</a>
+							</div>
+							<ul class="goods-list">
+								<li>
+									<img class="goods-poster" src="images/content/QJ2-1.jpg">
+									<div class="goods-desc">
+										<h5>红桃K 生血剂二合一(片剂+口服液) 10ml/支*10+0.45g*10*套餐9盒</h5>
+										<span class="price">￥256</span>
+									</div>
+								</li>
+								<li>
+									<img class="goods-poster" src="images/content/QJ2-2.jpg">
+									<div class="goods-desc">
+										<h5>红桃K 佳怡宝牌维生素C咀嚼片 1.2g/片*102片*2瓶套餐</h5>
+										<span class="price">￥39</span>
+									</div>
+								</li>
+								<li>
+									<img class="goods-poster" src="images/content/QJ2-3.jpg">
+									<div class="goods-desc">
+										<h5>红桃K 维生素C加E咀嚼片 800mg/片*120片*2瓶套餐</h5>
+										<span class="price">￥58</span>
+									</div>
+								</li>
+							</ul>
+						</li>
+						<li class="shop-item">
+							<div class="shop-header">
+								<img class="shop-logo" src="images/content/QJ3.jpg">
+								<div class="meta shop-meta">
+									<a href="#">
+										<h4>伊丝艾拉官方旗舰店</h4>
+										<p>18.8万粉丝</p>
+									</a>
+								</div>
+								<a class="enter-btn" href="#">进店看看</a>
+							</div>
+							<ul class="goods-list">
+								<li>
+									<img class="goods-poster" src="images/content/QJ3-1.jpg">
+									<div class="goods-desc">
+										<h5>伊丝艾拉夏天轻薄透气性感调整型聚拢超薄款单层围蕾丝多色文胸</h5>
+										<span class="price">￥69</span>
+									</div>
+								</li>
+								<li>
+									<img class="goods-poster" src="images/content/QJ3-2.jpg">
+									<div class="goods-desc">
+										<h5>清仓 伊丝艾拉深V光面性感女文胸绚丽野性印花女士内衣8177</h5>
+										<span class="price">￥59</span>
+									</div>
+								</li>
+								<li>
+									<img class="goods-poster" src="images/content/QJ3-3.jpg">
+									<div class="goods-desc">
+										<h5>有/无钢圈伊丝艾拉文胸性感纯色内衣一片式文胸聚拢调整胸罩包邮</h5>
+										<span class="price">￥89</span>
+									</div>
+								</li>
+							</ul>
+						</li>
+						<li class="shop-item">
+							<div class="shop-header">
+								<img class="shop-logo" src="images/content/QJ4.jpg">
+								<div class="meta shop-meta">
+									<a href="#">
+										<h4>凯胜官方旗舰店</h4>
+										<p>9499粉丝</p>
+									</a>
+								</div>
+								<a class="enter-btn" href="#">进店看看</a>
+							</div>
+							<ul class="goods-list">
+								<li>
+									<img class="goods-poster" src="images/content/QJ4-1.jpg">
+									<div class="goods-desc">
+										<h5>凯胜2016新款男鞋羽毛球训练鞋运动鞋FYTL009</h5>
+										<span class="price">￥159</span>
+									</div>
+								</li>
+								<li>
+									<img class="goods-poster" src="images/content/QJ4-2.jpg">
+									<div class="goods-desc">
+										<h5>凯胜羽毛球系列速干男装常规收口比赛服上衣FAYK005</h5>
+										<span class="price">￥79</span>
+									</div>
+								</li>
+								<li>
+									<img class="goods-poster" src="images/content/QJ4-3.jpg">
+									<div class="goods-desc">
+										<h5>凯胜网面耐磨男鞋低帮羽毛球训练鞋FYTK001</h5>
+										<span class="price">￥149</span>
+									</div>
+								</li>
+							</ul>
+						</li>
+					</ul>
+				</div>
      <!-- 底部模块的制作 start -->
      <footer class="footer">
         <div>
