--- a/index.html
+++ b/index.html
@@ -1323,6 +1323,60 @@
 						</li>
 					</ul>
 				</div>
+				<div class="ad">
+					<a href="#"><img src="images/content/ad2.jpg"></a>
+				</div>
+				<div class="floor-CNXH" id="floor-CNXH">
+					<h3>
+						<span class="text-line">——</span>
+						猜你喜欢
+						<span class="text-line">——</span>
+					</h3>
+					<div class="box">
+						<ul class="box-item">
+							<li>
+								<a href="#"><img src="images/content/QJ4-3.jpg"></a>
+							</li>
+							<li>
+								<a href="#"><img src="images/content/QJ4-3.jpg"></a>
+							</li>
+							<li>
+								<a href="#"><img src="images/content/QJ4-3.jpg"></a>
+							</li>
+							<li>
+								<a href="#"><img src="images/content/QJ4-3.jpg"></a>
+							</li>
+							<li>
+								<a href="#"><img src="images/content/QJ4-3.jpg"></a>
+							</li>
+							<li>
+								<a href="#"><img src="images/content/QJ4-3.jpg"></a>
+							</li>
+							<li>
+								<a href="#"><img src="images/content/QJ4-3.jpg"></a>
+							</li>
+							<li>
+								<a href="#"><img src="images/content/QJ4-3.jpg"></a>
+							</li>
+							<li>
+								<a href="#"><img src="images/content/QJ4-3.jpg"></a>
+							</li>
+							<li>
+								<a href="#"><img src="images/content/QJ4-3.jpg"></a>
+							</li>
+							<li>
+								<a href="#"><img src="images/content/QJ4-3.jpg"></a>
+							</li>
+							<li>
+								<a href="#"><img src="images/content/QJ4-3.jpg"></a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<!-- end floor -->
+		</div>
+		<!-- end content -->
      <!-- 底部模块的制作 start -->
      <footer class="footer">
         <div>
