--- a/index.html
+++ b/index.html
@@ -31,10 +31,156 @@
                 </ul>
             </div>
             <div class="fr">
-                <ul>
+				<ul class="sn-quick-menu">
+					<li class="sn-mytaobao menu-item">
+						<a href="#">我的淘宝 <b class="triangle "></b> </a>
+						<ul class="sub-menu">
+							<li>
+								<a href="#" target="_top">已买到的宝贝</a>
+							</li>
+							<li>
+								<a href="#" target="_top">已卖出的宝贝</a>
+							</li>
+						</ul>
+					</li>
+					<li class="sn-mybrand">
+						<i class="iconfont sn-icon">&#xe60f;</i>
+						<a href="#" target="_top">我关注的品牌</a>
+					</li>
+					<li class="sn-cart default">
+						<i class="iconfont sn-icon">&#xe628;</i>
+						<a href="#" target="_top">购物车</a>
+					</li>
+					<li class="sn-cart logged">
+						<i class="iconfont sn-icon">&#xe628;</i>
+						<a href="#" target="_top">购物车
+							<span  class="cart-count count"></span> 件
+						</a>
+					</li>
+					<li class="sn-favorite menu-item">
+						<a href="#">收藏夹 <b class="triangle"></b> </a>
+						<ul class="sub-menu">
+							<li>
+								<a href="#" target="_top">收藏的宝贝</a>
+							</li>
+							<li>
+								<a href="#" target="_top">收藏的店铺</a>
+							</li>
+						</ul>
+					</li>
+					<li class="sn-separator">|</li>
+					<li class="sn-mobile">
+						<i class="iconfont sn-icon">&#xe61d;</i>
+						<a href="#" target="_top" title="天猫无线">手机版</a>
+						<div class="sn-qrcode">
+							<div class="sn-qrcode-content"></div>
+							<p>扫一扫，定制我的天猫！</p>
+							<b class="triangle"></b>
+						</div>
+					</li>
+					<li>
+						<a href="#">淘宝网</a>
+					</li>
+					<li>
+						<a href="#">企业采购</a>
+					</li>
+					<li class="sn-seller menu-item">
+						<a href="#" target="_top">商家支持 <b class="triangle"></b></a>
+						<ul class="sub-menu">
+							<li>
+								<h3>商家：</h3>
+								<a href="#" target="_top">商家中心</a>
+								<a href="#" target="_top">商家入驻</a>
+								<a href="#" target="_top">运营服务</a>
+								<a href="#" target="_top">商家品控</a>
+								<a href="#" target="_top">商家工具</a>
+								<a href="#" target="_top">商家规则</a>
+								<a href="#" target="_top">商家智库</a>
+								<a href="#" target="_top">喵言喵语</a>
+							</li>
+							<li>
+								<h3>帮助</h3>
+								<a href="#" target="_top">帮助中心</a>
+							</li>
+						</ul>
+					</li>
+					<li class="sn-sitemap menu-item">
+						<i class="iconfont sn-icon">&#xe613;</i>
+						<a href="#" target="_top">网站导航 <b class="triangle"></b></a>
+						<div class="sub-menu">
+							<div class="site-hot">
+								<h2>热点推荐 <span>Hot</span></h2>
+								<ul class="site-list">
+									<li><a href="#">天猫超市</a></li>
+									<li><a href="#">喵鲜生</a></li>
+									<li><a href="#">科技新品<i class="sn-sitemap-icon sn-sitemap-icon-new"></i></a></li>
+									<li><a href="#">女装新品<i class="sn-sitemap-icon sn-sitemap-icon-hot"></i></a></li>
+									<li><a href="#">玩街</a></li>
+									<li><a href="#">内衣新品<i class="sn-sitemap-icon sn-sitemap-icon-hot"></i></a></li>
+									<li><a href="#">试美妆</a></li>
+									<li><a href="#">运动新品</a></li>
+									<li><a href="#">时尚先生<i class="sn-sitemap-icon sn-sitemap-icon-hot"></i></a></li>
+									<li><a href="#">精明妈咪</a></li>
+									<li><a href="#">吃乐会<i class="sn-sitemap-icon sn-sitemap-icon-new"></i></a></li>
+									<li><a href="#">企业采购</a></li>
+									<li><a href="#">会员积分</a></li>
+									<li><a href="#">天猫国际</a></li>
+								</ul>
+							</div>
+							<div class="site-market">
+								<h2>行业市场 <span>Market</span></h2>
+								<ul class="site-list">
+									<li><a href="#">美妆</a></li>
+									<li><a href="#">电器</a></li>
+									<li><a href="#">女装<i class="sn-sitemap-icon sn-sitemap-icon-hot"></i></a></li>
+									<li><a href="#">男装<i class="sn-sitemap-icon sn-sitemap-icon-hot"></i></a></li>
+									<li><a href="#">女鞋</a></li>
+									<li><a href="#">男鞋</a></li>
+									<li><a href="#">内衣<i class="sn-sitemap-icon sn-sitemap-icon-hot"></i></a></li>
+									<li><a href="#">箱包</a></li>
+									<li><a href="#">运动</a></li>
+									<li><a href="#">母婴</a></li>
+									<li><a href="#">家装</a></li>
+									<li><a href="#">医药</a></li>
+									<li><a href="#">食品</a></li>
+									<li><a href="#">配饰<i class="sn-sitemap-icon sn-sitemap-icon-new"></i></a></li>
+									<li><a href="#">汽车</a></li>
+								</ul>
+							</div>
+							<div class="site-brand">
+								<h2>品牌风尚 <span>Brand</span></h2>
+								<ul class="site-list">
+									<li><a href="#">尚天猫</a></li>
+									<li><a href="#">大牌街</a></li>
+									<li><a href="#">潮牌街</a></li>
+									<li><a href="#">天猫原创</a></li>
+									<li><a href="#">什么牌子好</a></li>
+								</ul>
+							</div>
+							<div class="site-help">
+								<h2>服务指南 <span>Help</span></h2>
+								<ul class="site-list">
+									<li><a href="#">帮助中心</a></li>
+									<li><a href="#">品质保障</a></li>
+									<li><a href="#">特色服务</a></li>
+									<li><a href="#">七天退换货</a></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+				</ul>
+                <!-- <ul>
                     <li>
                         <a href="#">我的淘宝</a>
-                        <span class="iconfont">&#xe602;</span>
+						<span class="iconfont">&#xe602;</span>
+						<ul class="sub-menu">
+							<li>
+								<a href="#" target="_top">已买到的宝贝</a>
+							</li>
+							<li>
+								<a href="#" target="_top">已卖出的宝贝</a>
+							</li>
+						</ul>
                     </li>
                     <li>
                         <span class="iconfont mr5" >&#xe609;</span>
@@ -63,7 +209,7 @@
                         <a href="#">网站导航</a>
                         <span class="iconfont">&#xe602;</span>
                     </li>
-                </ul>
+                </ul> -->
             </div>
         </div>
     </section>
@@ -163,7 +309,8 @@
                             <a href="#">图书音像</a>
                         </li>
                     </ul>
-                </div>
+				</div>
+				
             </div>
             <div class="navitems">
                 <ul>
@@ -1333,42 +1480,90 @@
 						<span class="text-line">——</span>
 					</h3>
 					<div class="box">
-						<ul class="box-item">
+						<ul class="goods-list">
 							<li>
-								<a href="#"><img src="images/content/QJ4-3.jpg"></a>
+								<img class="goods-poster" src="images/content/QJ4-1.jpg">
+								<div class="goods-desc">
+									<h5>凯胜2016新款男鞋羽毛球训练鞋运动鞋FYTL009</h5>
+									<span class="price">￥159</span>
+								</div>
 							</li>
 							<li>
-								<a href="#"><img src="images/content/QJ4-3.jpg"></a>
+								<img class="goods-poster" src="images/content/QJ4-2.jpg">
+								<div class="goods-desc">
+									<h5>凯胜羽毛球系列速干男装常规收口比赛服上衣FAYK005</h5>
+									<span class="price">￥79</span>
+								</div>
 							</li>
 							<li>
-								<a href="#"><img src="images/content/QJ4-3.jpg"></a>
+								<img class="goods-poster" src="images/content/QJ4-3.jpg">
+								<div class="goods-desc">
+									<h5>凯胜网面耐磨男鞋低帮羽毛球训练鞋FYTK001</h5>
+									<span class="price">￥149</span>
+								</div>
 							</li>
 							<li>
-								<a href="#"><img src="images/content/QJ4-3.jpg"></a>
+								<img class="goods-poster" src="images/content/QJ1-1.jpg">
+								<div class="goods-desc">
+									<h5>ABAHOUSE 2016春夏新款男士牛皮系带休闲皮鞋多色可选7201301023</h5>
+									<span class="price">￥888</span>
+								</div>
 							</li>
 							<li>
-								<a href="#"><img src="images/content/QJ4-3.jpg"></a>
+								<img class="goods-poster" src="images/content/QJ1-2.jpg">
+								<div class="goods-desc">
+									<h5>ABAHOUSE 春夏款定番系列意大利产高级牛皮撞色凉拖5251209046</h5>
+									<span class="price">￥564</span>
+								</div>
 							</li>
 							<li>
-								<a href="#"><img src="images/content/QJ4-3.jpg"></a>
+								<img class="goods-poster" src="images/content/QJ1-3.jpg">
+								<div class="goods-desc">
+									<h5>ABAHOUSE 2016春夏新款意大利产设计款软底牛皮拖鞋7271009041</h5>
+									<span class="price">￥594</span>
+								</div>
 							</li>
 							<li>
-								<a href="#"><img src="images/content/QJ4-3.jpg"></a>
+								<img class="goods-poster" src="images/content/QJ2-1.jpg">
+								<div class="goods-desc">
+									<h5>红桃K 生血剂二合一(片剂+口服液) 10ml/支*10+0.45g*10*套餐9盒</h5>
+									<span class="price">￥256</span>
+								</div>
 							</li>
 							<li>
-								<a href="#"><img src="images/content/QJ4-3.jpg"></a>
+								<img class="goods-poster" src="images/content/QJ2-2.jpg">
+								<div class="goods-desc">
+									<h5>红桃K 佳怡宝牌维生素C咀嚼片 1.2g/片*102片*2瓶套餐</h5>
+									<span class="price">￥39</span>
+								</div>
 							</li>
 							<li>
-								<a href="#"><img src="images/content/QJ4-3.jpg"></a>
+								<img class="goods-poster" src="images/content/QJ2-3.jpg">
+								<div class="goods-desc">
+									<h5>红桃K 维生素C加E咀嚼片 800mg/片*120片*2瓶套餐</h5>
+									<span class="price">￥58</span>
+								</div>
 							</li>
 							<li>
-								<a href="#"><img src="images/content/QJ4-3.jpg"></a>
+								<img class="goods-poster" src="images/content/QJ3-1.jpg">
+								<div class="goods-desc">
+									<h5>伊丝艾拉夏天轻薄透气性感调整型聚拢超薄款单层围蕾丝多色文胸</h5>
+									<span class="price">￥69</span>
+								</div>
 							</li>
 							<li>
-								<a href="#"><img src="images/content/QJ4-3.jpg"></a>
+								<img class="goods-poster" src="images/content/QJ3-2.jpg">
+								<div class="goods-desc">
+									<h5>清仓 伊丝艾拉深V光面性感女文胸绚丽野性印花女士内衣8177</h5>
+									<span class="price">￥59</span>
+								</div>
 							</li>
 							<li>
-								<a href="#"><img src="images/content/QJ4-3.jpg"></a>
+								<img class="goods-poster" src="images/content/QJ3-3.jpg">
+								<div class="goods-desc">
+									<h5>有/无钢圈伊丝艾拉文胸性感纯色内衣一片式文胸聚拢调整胸罩包邮</h5>
+									<span class="price">￥89</span>
+								</div>
 							</li>
 						</ul>
 					</div>
